Fix on safari

--- a/src/stylus/_css-sans.styl
+++ b/src/stylus/_css-sans.styl
@@ -23,7 +23,7 @@
     width: 16px
   &:after
     skew(19deg, 0)
-    left: 45px    
+    left: 45px
 .B
   border-left: solid 16px $black
   height: 125px
@@ -31,10 +31,10 @@
   position: relative
   top: 12.5px
   width: 60px
-  &:before, 
+  &:before,
   &:after
     border-radius(0 240% 180% 0, 0 180% 180% 0)
-    border-color: $black    
+    border-color: $black
     border-style: solid
     border-width: $w $w 10px 0
     content: ""
@@ -380,7 +380,7 @@
     width: 44px
   &:after
     border-radius(240% 0 0 110%, 140% 0 0 100%)
-    rotate(198.5deg)
+    rotate(198.7deg) skew(1.4deg, -0.55deg)
     border-color: $black
     border-style: solid
     border-width: 14px 0 $w $w
